--- a/02.calendar/package.json
+++ b/02.calendar/package.json
@@ -8,5 +8,9 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.1.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "dayjs": "^1.11.11",
+    "minimist": "^1.2.8"
+  }
 }
